# mancala

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
assets/shaders/: simple-fs.glsl  simple-vs.glsl  spritesheet-vs.glsl  text-fs.glsl  text-vs.glsl  textured-fs.glsl
src/: FT2.c  FT2.h  assets.c  assets.h  camera.c  camera.h  common_shaders.c  common_shaders.h  core.c  core.h  font.c  font.h  game_states.c  game_states.h  gs_game.h  gs_menu.h  gs_settings.h  gs_win.h  main.c  mesh.c  mesh.h  mesh_helper.c  mesh_helper.h  scene.c  scene.h  scene_main.c  scene_main.h  scene_main.type.h  shader.c  shader.h  systems.c  systems.h  text.c  text.h  texture.c  texture.h
src/utils/: dynamic_array.c  dynamic_array.h  mouse_button.h  unicode-blocks.py  unicode-blocks.txt  unicode_blocks.arrays.c  unicode_blocks.c  unicode_blocks.h
